--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Library/Java/JavaVirtualMachines/jdk-10.0.2.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"/Library/Java/JavaVirtualMachines/jdk-10.0.2.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"/Users/javaxprogrammer/Desktop/CS iGCSE File Extras/CaeserCipherEncrypter","type":"PROJECT","hints":{"PROJECT_NAME":"CaeserCipherEncrypter"}},"ABSENT"]]
